--- a/index.html
+++ b/index.html
@@ -1,168 +1,203 @@
-h1 My Internet Periodic Table
-h5 How I waste my time on the Internet
-			
-div.periodic-table
-	.empty-spacer-1
-	.empty-spacer-2
-	.periodic-element.social-media(data-description="I'm only on here to reject invitations 😂")
-		.periodic-element-inner
-			.title Li
-			.description LinkedIn
-	.periodic-element.social-media(data-description="Only so I don't miss out on my friends' milestones 🤷")
-		.periodic-element-inner
-			.title Fb
-			.description Facebook
-	.periodic-element.just-trying(data-description="Looking at amazing Dribbble 🏀 shots and internally die from the amount of talent/skill out there")
-		.periodic-element-inner
-			.title Db
-			.description Dribbble
-	.periodic-element.intense-work(data-description="Coming up with sassy commit messages 🔥")
-		.periodic-element-inner
-			.title Ct
-			.description Commits
-	
-	.periodic-element.intense-work(data-description="Making custom emojis for Slack 💪🏻")
-		.periodic-element-inner
-			.title Sl
-			.description Slack
-	.periodic-element.fun-stuff(data-description="'Wikipedia Wormhole' is a thing. And it is dangerous 🐛")
-		.periodic-element-inner
-			.title Wk
-			.description Wikipedia
-	.periodic-element.fun-stuff(data-description="Choosing the right playlist. (If my Spotify is working... it's always not working)")
-		.periodic-element-inner
-			.title Sp
-			.description Spotify
-	a.periodic-element.social-media(data-description="If you say something witty, it's going on my Twitter 🐦" href="https://twitter.com/meowlivia_" target="_blank")
-		.periodic-element-inner
-			.title Tw
-			.description Twitter
-	.periodic-element.social-media(data-description="Professional Dota 2 Watcher right here ✌️")
-		
-		.periodic-element-inner
-			.title Tc
-			.description Twitch
-	.periodic-element.intense-work(data-description="Creating GitHub issues, a.k.a. tossing problems which I can solve to the frontend team")
-		.periodic-element-inner
-			.title Gt
-			.description GitHub
-	.periodic-element.intense-work(data-description="Trying to get yarn working after an update. The main reason I toss issues to the frontend team.")
-		.periodic-element-inner
-			.title Yn
-			.description Yarn
-	.periodic-element.just-trying(data-description="A skill I'm trying to learn 🎨... and failing to learn 😛")
-		.periodic-element-inner
-			.title Il
-			.description Illustration
-	a.periodic-element.just-trying(data-description="Resident Designer. Keeping the diminishing flame of web design in me alive 🕯️" href="https://tellystats.com" target="_blank")
-		.periodic-element-inner
-			.title Te
-			.description TellyStats
-	
-	.periodic-element.just-trying(data-description="I just need to stop adding items and actually start doing things. Am I the only one who is still using Wunderlist? 😂")
-		.periodic-element-inner
-			.title Wu
-			.description Wunderlist
-	.periodic-element.fun-stuff(data-description="I have zero cooking skills, so I watch cooking videos and never try cooking for real 🍳")
-		.periodic-element-inner
-			.title Cv
-			.description Cooking
-	.periodic-element.fun-stuff(data-description="Or any animal gifs, basically. 🐈🐕🦊🦔🦉🐍🐬🦄")
-		.periodic-element-inner
-			.title Dg
-			.description Dog Gifs
-	a.periodic-element.fun-stuff(data-description="Getting distracted by Toggl comics 🙃" href="https://blog.toggl.com" target="_blank")
-		.periodic-element-inner
-			.title Tg
-			.description Toggl Blog
-	.periodic-element.just-trying(data-description="I google every damn thing. Including movie spoilers. While watching the movie. Yes.")
-		.periodic-element-inner
-			.title Gg
-			.description Google
-	a.periodic-element.just-trying(data-description="I like spreadsheets so I create them for the smallest reasons 🧐" href="https://docs.google.com/spreadsheets/d/1Dim2nKRjgpkjA4miqTzcLPT68L0B5LU2aWZWF5hHYAc/edit#gid=0" target="_blank")
-		.periodic-element-inner
-			.title Ex
-			.description Excel
-	.periodic-element.intense-work(data-description="I still StackOverflow the simplest shit 'just to be sure'. Where will we be without it ❤️")
-		.periodic-element-inner
-			.title So
-			.description StackOv.
-	.periodic-element.intense-work(data-description="It's very much not my job, but sometimes I stick my hand into the Coding Projects jar 🍪 anyway")
-		.periodic-element-inner
-			.title Cd
-			.description Coding
-	
-	.periodic-element.just-trying(data-description="I spend so much time on Codepen, I decided to go Pro because I felt bad 💸")
-		.periodic-element-inner
-			.title Cp
-			.description Codepen
-	.periodic-element.just-trying(data-description="We all have that one thing that keeps us alive 🛫🗺️")
-		.periodic-element-inner
-			.title Tr
-			.description Travel
-	a.periodic-element.social-media(data-description="Fuck this app. It's a terrible love-hate relationship." href="https://www.instagram.com/meowliviaaa/" target="_blank")
-		.periodic-element-inner
-			.title In
-			.description Instagram
-	a.periodic-element.fun-stuff(data-description="Obsessing over musicals and stalking broadway stars is 👏🏻 not 👏🏻 a 👏🏻 crime!" href="https://codepen.io/collection/XPWkdW/" target="_blank")
-		.periodic-element-inner
-			.title Mu
-			.description Musicals
-	.periodic-element.fun-stuff(data-description="I learn memes, I make memes, I breathe memes.")
-		.periodic-element-inner
-			.title Me
-			.description Memes
-	.periodic-element.intense-work(data-description="Battling double columns in Notion")
-		.periodic-element-inner
-			.title No
-			.description Notion
-	.periodic-element.social-media(data-description="Oh my god. Someone please save me from this Reddit hell hole 😭")
-		.periodic-element-inner
-			.title Re
-			.description Reddit
-	
-	.periodic-element.intense-work(data-description="Research & Documentation nobody asks for 🤓📝")
-		.periodic-element-inner
-			.title Rd
-			.description Research
-	.periodic-element.intense-work(data-description="Stats. Data. Stats. Data. 📊 Just lots of reporting.")
-		.periodic-element-inner
-			.title St
-			.description Stats
-	.periodic-element.intense-work(data-description="Ads. Ads. Ads. If you've seen a Toggl ad, it was me. (Sorry)")
-		.periodic-element-inner
-			.title Ad
-			.description Ads
-	
-			
-.legend-table
-	.legend-table__wrapper
-		span.legend-table__marker.social-media
-		span.legend-table__text Social Media
-		span.legend-table__marker.intense-work
-		span.legend-table__text Serious Work
-		span.legend-table__marker.just-trying
-		span.legend-table__text Personal Development
-		span.legend-table__marker.fun-stuff
-		span.legend-table__text Fun Stuff
-		br
-		div.legend-table__direction
-			span &#8594; &ensp; Across the table: Importance
-		div.legend-table__direction
-			span &#8595; &ensp; Down the table: Time Spent
-
-aside.context
-	.explanation
-		| I try to be productive a lot, and I fail a lot :)
-		br
-		| Part of the 
-		a(href="https://codepen.io/collection/DQvYpQ/" target="_blank") CSS Grid collection here
-		| .
-
-footer
-	a(href="https://twitter.com/meowlivia_" target="_blank")
-		i.icon-social-twitter.icons
-	a(href="https://github.com/oliviale" target="_blank")
-		i.icon-social-github.icons
-	a(href="https://dribbble.com/oliviale" target="_blank")
-		i.icon-social-dribbble.icons
+<h1>My Internet Periodic Table</h1>
+<h5>How I waste my time on the Internet</h5>
+<div class="periodic-table">
+    <div class="empty-spacer-1"></div>
+    <div class="empty-spacer-2"></div>
+    <div class="periodic-element social-media" data-description="I'm only on here to reject invitations 😂">
+        <div class="periodic-element-inner">
+            <div class="title">Li</div>
+            <div class="description">LinkedIn</div>
+        </div>
+    </div>
+    <div class="periodic-element social-media" data-description="Only so I don't miss out on my friends' milestones 🤷">
+        <div class="periodic-element-inner">
+            <div class="title">Fb</div>
+            <div class="description">Facebook</div>
+        </div>
+    </div>
+    <div class="periodic-element just-trying" data-description="Looking at amazing Dribbble 🏀 shots and internally die from the amount of talent/skill out there">
+        <div class="periodic-element-inner">
+            <div class="title">Db</div>
+            <div class="description">Dribbble</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Coming up with sassy commit messages 🔥">
+        <div class="description">Commits</div>
+        <div class="periodic-element-inner">
+            <div class="title">Ct</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Making custom emojis for Slack 💪🏻">
+        <div class="periodic-element-inner">
+            <div class="title">Sl</div>
+            <div class="description">Slack</div>
+        </div>
+    </div>
+    <div class="periodic-element fun-stuff" data-description="'Wikipedia Wormhole' is a thing. And it is dangerous 🐛">
+        <div class="periodic-element-inner">
+            <div class="title">Wk</div>
+            <div class="description">Wikipedia</div>
+        </div>
+    </div>
+    <div class="periodic-element fun-stuff" data-description="Choosing the right playlist. (If my Spotify is working... it's always not working)">
+        <div class="periodic-element-inner">
+            <div class="title">Sp</div>
+            <div class="description">Spotify</div>
+        </div>
+    </div>
+    <a class="periodic-element social-media" data-description="If you say something witty, it's going on my Twitter 🐦" href="https://twitter.com/meowlivia_" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">Tw</div>
+            <div class="description">Twitter</div>
+        </div>
+    </a>
+    <div class="periodic-element social-media" data-description="Professional Dota 2 Watcher right here ✌️">
+        <div class="periodic-element-inner">
+            <div class="title">Tc</div>
+            <div class="description">Twitch</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Creating GitHub issues, a.k.a. tossing problems which I can solve to the frontend team">
+        <div class="periodic-element-inner">
+            <div class="title">Gt</div>
+            <div class="description">GitHub</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Trying to get yarn working after an update. The main reason I toss issues to the frontend team.">
+        <div class="periodic-element-inner">
+            <div class="title">Yn</div>
+            <div class="description">Yarn</div>
+        </div>
+    </div>
+    <div class="periodic-element just-trying" data-description="A skill I'm trying to learn 🎨... and failing to learn 😛">
+        <div class="periodic-element-inner">
+            <div class="title">Il</div>
+            <div class="description">Illustration</div>
+        </div>
+    </div>
+    <a class="periodic-element just-trying" data-description="Resident Designer. Keeping the diminishing flame of web design in me alive 🕯️" href="https://tellystats.com" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">Te</div>
+            <div class="description">TellyStats</div>
+        </div>
+    </a>
+    <div class="periodic-element just-trying" data-description="I just need to stop adding items and actually start doing things. Am I the only one who is still using Wunderlist? 😂">
+        <div class="periodic-element-inner">
+            <div class="title">Wu</div>
+            <div class="description">Wunderlist</div>
+        </div>
+    </div>
+    <div class="periodic-element fun-stuff" data-description="I have zero cooking skills, so I watch cooking videos and never try cooking for real 🍳">
+        <div class="periodic-element-inner">
+            <div class="title">Cv</div>
+            <div class="description">Cooking</div>
+        </div>
+    </div>
+    <div class="periodic-element fun-stuff" data-description="Or any animal gifs, basically. 🐈🐕🦊🦔🦉🐍🐬🦄">
+        <div class="periodic-element-inner">
+            <div class="title">Dg</div>
+            <div class="description">Dog Gifs</div>
+        </div>
+    </div>
+    <a class="periodic-element fun-stuff" data-description="Getting distracted by Toggl comics 🙃" href="https://blog.toggl.com" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">Tg</div>
+            <div class="description">Toggl Blog</div>
+        </div>
+    </a>
+    <div class="periodic-element just-trying" data-description="I google every damn thing. Including movie spoilers. While watching the movie. Yes.">
+        <div class="periodic-element-inner">
+            <div class="title">Gg</div>
+            <div class="description">Google</div>
+        </div>
+    </div>
+    <a class="periodic-element just-trying" data-description="I like spreadsheets so I create them for the smallest reasons 🧐" href="https://docs.google.com/spreadsheets/d/1Dim2nKRjgpkjA4miqTzcLPT68L0B5LU2aWZWF5hHYAc/edit#gid=0" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">Ex</div>
+            <div class="description">Excel</div>
+        </div>
+    </a>
+    <div class="periodic-element intense-work" data-description="I still StackOverflow the simplest shit 'just to be sure'. Where will we be without it ❤️">
+        <div class="periodic-element-inner">
+            <div class="title">So</div>
+            <div class="description">StackOv.</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="It's very much not my job, but sometimes I stick my hand into the Coding Projects jar 🍪 anyway">
+        <div class="periodic-element-inner">
+            <div class="title">Cd</div>
+            <div class="description">Coding</div>
+        </div>
+    </div>
+    <div class="periodic-element just-trying" data-description="I spend so much time on Codepen, I decided to go Pro because I felt bad 💸">
+        <div class="periodic-element-inner">
+            <div class="title">Cp</div>
+            <div class="description">Codepen</div>
+        </div>
+    </div>
+    <div class="periodic-element just-trying" data-description="We all have that one thing that keeps us alive 🛫🗺️">
+        <div class="periodic-element-inner">
+            <div class="title">Tr</div>
+            <div class="description">Travel</div>
+        </div>
+    </div>
+    <a class="periodic-element social-media" data-description="Fuck this app. It's a terrible love-hate relationship." href="https://www.instagram.com/meowliviaaa/" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">In</div>
+            <div class="description">Instagram</div>
+        </div>
+    </a>
+    <a class="periodic-element fun-stuff" data-description="Obsessing over musicals and stalking broadway stars is 👏🏻 not 👏🏻 a 👏🏻 crime!" href="https://codepen.io/collection/XPWkdW/" target="_blank">
+        <div class="periodic-element-inner">
+            <div class="title">Mu</div>
+            <div class="description">Musicals</div>
+        </div>
+    </a>
+    <div class="periodic-element fun-stuff" data-description="I learn memes, I make memes, I breathe memes.">
+        <div class="periodic-element-inner">
+            <div class="title">Me</div>
+            <div class="description">Memes</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Battling double columns in Notion">
+        <div class="periodic-element-inner">
+            <div class="title">No</div>
+            <div class="description">Notion</div>
+        </div>
+    </div>
+    <div class="periodic-element social-media" data-description="Oh my god. Someone please save me from this Reddit hell hole 😭">
+        <div class="periodic-element-inner">
+            <div class="title">Re</div>
+            <div class="description">Reddit</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Research &amp; Documentation nobody asks for 🤓📝">
+        <div class="periodic-element-inner">
+            <div class="title">Rd</div>
+            <div class="description">Research</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Stats. Data. Stats. Data. 📊 Just lots of reporting.">
+        <div class="periodic-element-inner">
+            <div class="title">St</div>
+            <div class="description">Stats</div>
+        </div>
+    </div>
+    <div class="periodic-element intense-work" data-description="Ads. Ads. Ads. If you've seen a Toggl ad, it was me. (Sorry)">
+        <div class="periodic-element-inner">
+            <div class="title">Ad</div>
+            <div class="description">Ads</div>
+        </div>
+    </div>
+</div>
+<div class="legend-table">
+    <div class="legend-table__wrapper"><span class="legend-table__marker social-media"></span><span class="legend-table__text">Social Media</span><span class="legend-table__marker intense-work"></span><span class="legend-table__text">Serious Work</span><span class="legend-table__marker just-trying"></span>
+        <span class="legend-table__text">Personal Development</span><span class="legend-table__marker fun-stuff"></span><span class="legend-table__text">Fun Stuff</span><br/>
+        <div class="legend-table__direction"><span>&#8594; &ensp; Across the table: Importance</span></div>
+        <div class="legend-table__direction"><span>&#8595; &ensp; Down the table: Time Spent</span></div>
+    </div>
+</div>
+<aside class="context">
+    <div class="explanation">I try to be productive a lot, and I fail a lot :)<br/>Part of the <a href="https://codepen.io/collection/DQvYpQ/" target="_blank">CSS Grid collection here</a>.</div>
+</aside>
+<footer><a href="https://twitter.com/meowlivia_" target="_blank"><i class="icon-social-twitter icons"></i></a><a href="https://github.com/oliviale" target="_blank"><i class="icon-social-github icons"></i></a><a href="https://dribbble.com/oliviale" target="_blank"><i class="icon-social-dribbble icons"></i></a></footer>
